namespace FinanceManager.Core.Domain.Entities;

public class Country
{
    public Guid Id { get; init; }
    public string Name { get; set; }
}