namespace FinanceManager.Core.Domain.Entities;

public class TimeZone
{
    public Guid Id { get; init; }
    public string Name { get; set; }
}